# f1-dash

./: .dockerignore  README.md  build.md  compose.override.yaml  docker-bake.hcl
api/src/endpoints/: schedule.rs
dash/src/hooks/: useDataEngine.ts
dashboard/: .yarnrc.yml  dockerfile  package.json
dashboard/src/app/(nav)/: layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx
dashboard/src/app/dashboard/standings/: page.tsx
dashboard/src/app/dashboard/weather/: map.tsx
dashboard/src/components/: Footer.tsx  Sidebar.tsx  TrackInfo.tsx
dashboard/src/components/complications/: Humidity.tsx
dashboard/src/components/dashboard/: Map.tsx
dashboard/src/lib/: getTrackStatusMessage.ts
realtime/src/: f1.rs  main.rs
signalr/: Cargo.toml
signalr/src/: lib.rs
simulator/: Cargo.toml
simulator/src/: save.rs
