[package]
name = "signalr"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["native-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "url"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4"] }
